--- a/index.html
+++ b/index.html
@@ -61,22 +61,21 @@
 							</header> -->
 							
 							<article class="col-6 col-12-xsmall work-item">
-								<h5>Hi! I am Darien, a graduate in Industrial Engineering at Hanoi University of Science and Technology.
+								<h5>Hi! I'm Darien, a graduate in Industrial Engineering at Hanoi University of Science and Technology.
 								</h5>
 								
-								<h5>Elevating product design and development is my playground. 
-									I'm a relentless explorer, diving deep into the abyss of innovation, always learning, always growing, always pushing boundaries.
-									My specific interest is to craft innovation & excellence leveraging statistical thinking & modeling!
-									I also love to explore the beauty of project management, especially agile way.
+								<h5>   
+								My specific interest is to craft innovation & excellence leveraging statistical thinking & modeling!
+								I also love to explore the beauty of project management, especially agile way.
 								</h5>
 
-								<h5>News: I am currently diving deeper into the field of Experimental Design & Reliability Statistics. Actively looking for communication and collaboration!</h5>
+								<h5>News: I am currently diving deeper into the field of Experimental Design & Engineering Statistics. Actively looking for communication and collaboration!</h5>
 
 							</article>
 
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/1111111.jpg" class="image fit thumb"><img src="images/1111111.jpg" alt="" /></a>
+								<a href="images/1111111.jpg" class="image fit thumb"><img src="images/1111111.png" alt="" /></a>
 							</article>
 						</div>
 					</section>
