--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/1111111.jpg" class="image fit thumb"><img src="images/1111111.png" alt="" /></a>
+								<a href="images/1111111.jpg" class="image fit thumb"><img src="images/1111111.jpg" alt="" /></a>
 							</article>
 						</div>
 					</section>
