--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</h5>
 								
 								<h5>   
-								My specific interest is to craft innovation & excellence leveraging statistical thinking & modeling!
+								Crafting innovation & excellence while leveraging statistical thinking is my WoW (Way of Working)!
 								I also love to explore the beauty of project management, especially agile way.
 								</h5>
 
