--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								
 								<h5>   
 								Crafting innovation & excellence while leveraging probabilistic and statistical thinking is my WoW (Way of Working)!
-								Also love to explore the beauty of project management, especially agile implementation in New Product Development.
+								Also love exploring the beauty of project management, especially agile implementation in New Product Development.
 								</h5>
 
 								<h5>News: I am currently diving deeper into the field of Experimental Design & Engineering Statistics. Actively looking for communication and collaboration!</h5>
